examples/external-dns/simple-dns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns-example-simple-dns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: external-dns-example-simple-dns
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: echoserver
          image: ealen/echo-server
          ports:
            - name: http
              containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: external-dns-example-simple-dns
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: simple-dns.api.itguyjournals.com
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
